# aula08_bootcamp

./: dados.parquet  etl.py  pipeline.py  pyproject.toml
